1. 新增脚本批量将音频转为卡片数据 2. 新增脚本将mp4转opus

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/genai": "^1.30.0"
+    "@google/genai": "^1.31.0",
+    "glob": "^13.0.0"
   }
 }
